--- a/src/index.css
+++ b/src/index.css
@@ -9,6 +9,7 @@ body {
   background: radial-gradient(circle, rgba(176,0,244,1) 5%, rgba(170,44,218,1) 100%);
   padding: 20px 30px;
   overflow-x: hidden;
+  overflow-y: hidden;
 }
 
 .bold {
